<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="@dimen/setting_btn_size"
        android:layout_height="@dimen/setting_btn_size"
        android:layout_marginTop="@dimen/setting_btn_margin_top"
        android:layout_marginEnd="@dimen/setting_btn_margin_right"
        android:layout_marginRight="@dimen/setting_btn_margin_right"
        android:focusable="true"
        android:nextFocusDown="@+id/topic_edit"
        android:onClick="onSettingClicked"
        android:src="@drawable/btn_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/logo_margin_bottom"
        android:scaleType="centerCrop"
        android:src="@drawable/main_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/topic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:backgroundTint="@color/blue_alpha"
            android:digits="@string/legal_channel_name_characters"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/topic_edit_hint"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusUp="@+id/setting_button"
            android:nextFocusDown="@+id/start_broadcast_button"
            android:paddingBottom="@dimen/edit_text_padding"
            android:singleLine="true"
            android:text="123456"
            android:textColor="@color/blue_alpha"
            android:textColorHint="@color/blue_alpha"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_normal">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_broadcast_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/start_broadcast_height"
            android:background="@drawable/start_broadcast_bg"
            android:focusable="true"
            android:gravity="center"
            android:nextFocusUp="@+id/topic_edit"
            android:onClick="onStartBroadcastClicked"
            android:paddingStart="@dimen/start_broadcast_padding"
            android:paddingLeft="@dimen/start_broadcast_padding"
            android:paddingEnd="@dimen/start_broadcast_padding"
            android:paddingRight="@dimen/start_broadcast_padding"
            android:text="@string/start_broadcast_title"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="@color/start_broadcast_text_color"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/info_margin_bottom"
        android:text="@string/powered_by_agora"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
